# MeSSI

./: GC_lab1.docx  GC_lab2.docx  GC_lab3.docx  GC_lab4.docx  MP_lab3.docx  README.txt  lab1.m  lab1_MR.docx  lab2_MP.docx  lab3.m  lab4.m  tisk.xlsx  ~$lab1.docx
course/: MP_lab2.docx  MP_lab2_theory.docx  equations.docx  main2.m
course/MATLAB/: README.txt  main.m  main2.m  test.m
course/MATLAB/temp/: dk.m  dr.m  main.m
course/Wolfram/: MP_DG_course.nb  main.nb  test.nb
course/calculations/: CMakeLists.txt  a.out  main  main.cpp  matplotlibcpp.h  output.txt
lab1/: gr12.opju  gr2.opju  lab1.docx  lab1.m  lab1.opju  lab1[793].docx  lab1_1.docx  lab1_var1.m
lab10/: lab10.docx
lab2/: gr3.opju  gr31.eps  lab2.docx  lab2.m  lab2.opju  quest2.docx  ПЗ2[794].docx
lab3/: lab3.docx  lab3.m  lab3.opju  quest3.docx
lab4/: lab4.docx  lab4.opju  quest4.docx
lab5/: lab5.docx  lab5.m  lab5.opju  quest5.docx
lab6/: lab6.docx  lab6.m  quest6.docx
lab7/: lab7.docx  lab7.m  quest7.docx
lab8/: lab8.docx  lab8.m  quest8.docx
lab9/: lab9.docx
